<resources>
    <string name="app_name">Sub Orders</string>
    <string name="restaurant_logo">restaurant logo</string>
    <string name="home_user_email">User e-mail</string>
    <string name="please_enter_e_mail_address">Please enter e-mail address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="exit">exit</string>
    <string name="coupons_and_promotions">Coupons and Promotions</string>
    <string name="favorites">Favorites</string>
    <string name="order_history">Order History</string>
    <string name="redeem_rewards">Redeem Rewards</string>
    <string name="user_data">User Data</string>
    <string name="order_status">Order Status</string>
    <string name="settings">Settings</string>
    <string name="main_screen">Main Screen</string>
    <string name="new_order">New Order</string>
    <string name="sub_of_the_day_picture">Sub of the day picture</string>
    <string name="back">Back</string>
    <string name="next">next</string>
    <string name="add_paid_addon">add paid addon</string>
    <string name="remove_paid_addon">remove paid addon</string>
    <string name="zero">0</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="send_order">Send Order</string>
    <string name="vegetables">Vegetables</string>
    <string name="bread">Bread</string>
    <string name="sauces">Sauces</string>
    <string name="paid_addons">Paid AddOns</string>
    <string name="check_out">Check Out</string>
    <string name="reduce_number_of_drinks">reduce number of drinks</string>
    <string name="increase_number_of_drinks">increase number of drinks</string>
    <string name="pln">PLN</string>
    <string name="zero_pln">0.00</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="city">City</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit_data">Edit Data</string>
    <string name="total_price">Total Price</string>
    <string name="order">Order</string>
    <string name="delete">Delete</string>
    <string name="add_to_fav">Add to Favorites</string>
    <string name="coup_desc">Coupons description</string>
    <string name="rewards_image">rewards image</string>
    <string name="selected_reward_to_redeem">Selected reward to redeem</string>
    <string name="redeem_award">Redeem Award</string>
    <string name="enter_pin">enter pin</string>
    <string name="order_received">Order Received</string>
    <string name="in_the_making">In The Making</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="delivered">Order Delivered</string>
    <string name="order_number">LAST ORDER NUMBER</string>
    <string name="set_default_address">Set Default Address</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="add_another_address">Add another address</string>
    <string name="delivery_address_2">Delivery Address 2</string>
    <string name="only_one_address_provided">(only one address provided)</string>
    <string name="add_favorite_sandwich">Add Favorite Sandwich</string>
    <string name="logged_in">Logged In</string>
    <string name="login_failed">Login Failed</string>
    <string name="account_created">Account Created</string>
    <string name="account_not_created">Can not create account</string>
    <string name="mail_send">Send e-mail to:</string>
    <string name="mail_not_send">Failed to send e-mail</string>
    <string name="exiting_app">Exiting Application</string>
    <string name="please_choose_order">Please choose order</string>
    <string name="please_choose_type">Please choose type</string>
    <string name="please_choose_sub">Please choose Sub</string>
    <string name="please_choose_bread">Please choose bread</string>
    <string name="no_veges">No Vegetables</string>
    <string name="no_veges_message">There is no vegetables selected, would you like to select some?</string>
    <string name="yes">Yes</string>
    <string name="no_veges_please">No veges, please</string>
    <string name="no_sauces">No Sauces</string>
    <string name="no_sauces_message">There is no sauces selected, would you like to select some?</string>
    <string name="no_sauces_please">No sauces, please</string>
    <string name="placing_order">Placing Order...</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="user_exists">User exists</string>
    <string name="con_av">Connection Available</string>
    <string name="con_not_av">Connection not Available</string>
    <string name="circular_object">circular object</string>
    <string name="welcome">WELCOME</string>
    <string name="no_favs_added">No Favorites Added</string>
    <string name="item_added_to_fav">Item added to Favorites</string>
</resources>
