<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/user_data_root_view">

    <TextView
        android:id="@+id/user_data_user_name_label"
        style="@style/user_data_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_data_user_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/user_data_user_name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_data_user_name_label" />

    <TextView
        android:id="@+id/user_data_user_surname_label"
        style="@style/user_data_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/surname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_name_input" />

    <EditText
        android:id="@+id/user_data_user_surname_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:ems="10"
        android:hint="@string/enter_surname"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/user_data_user_surname_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_data_user_surname_label" />

    <TextView
        android:id="@+id/user_data_user_phone_label"
        style="@style/user_data_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/phone_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_surname_input" />

    <EditText
        android:id="@+id/user_data_user_phone_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/user_data_user_phone_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_data_user_phone_label" />

    <TextView
        android:id="@+id/user_data_user_email_label"
        style="@style/user_data_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/e_mail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_phone_input" />

    <EditText
        android:id="@+id/user_data_user_email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:ems="10"
        android:hint="@string/enter_e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/user_data_user_email_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_data_user_email_label" />

    <TextView
        android:id="@+id/user_data_user_delivery_address_label"
        style="@style/user_data_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/delivery_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_email_input" />

    <EditText
        android:id="@+id/user_data_user_delivery_address_street_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:ems="10"
        android:hint="@string/street"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/user_data_user_delivery_address_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_data_user_delivery_address_label" />

    <EditText
        android:id="@+id/user_data_user_delivery_address_number_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_delivery_address_street_input" />

    <EditText
        android:id="@+id/user_data_user_delivery_address_city_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="128dp"
        android:layout_marginStart="128dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_delivery_address_number_input" />

    <Button
        android:id="@+id/user_data_user_add_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_delivery_address_city_input"
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/add_another_address"/>

    <LinearLayout
        android:id="@+id/user_data_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/user_data_cancel_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/user_data_save_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>