<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background">

    <TextView
        android:id="@+id/user_data_user_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/user_data_style"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/user_data_user_name_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/name"
        style="@style/normal_text_style"
        app:layout_constraintTop_toTopOf="@+id/user_data_user_name_label"
        app:layout_constraintBottom_toBottomOf="@+id/user_data_user_name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="144dp"
        android:layout_marginStart="144dp" />

    <TextView
        android:id="@+id/user_data_user_surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        style="@style/user_data_style"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_name_output"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/user_data_user_surname_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/normal_text_style"
        tools:text="@string/surname"
        app:layout_constraintTop_toTopOf="@+id/user_data_user_surname_label"
        app:layout_constraintBottom_toBottomOf="@+id/user_data_user_surname_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="144dp"
        android:layout_marginStart="144dp"/>

    <TextView
        android:id="@+id/user_data_user_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        style="@style/user_data_style"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_surname_output"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/user_data_user_phone_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/normal_text_style"
        app:layout_constraintTop_toTopOf="@+id/user_data_user_phone_label"
        app:layout_constraintBottom_toBottomOf="@+id/user_data_user_phone_label"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/phone_number"
        android:layout_marginLeft="144dp"
        android:layout_marginStart="144dp"/>

    <TextView
        android:id="@+id/user_data_user_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        style="@style/user_data_style"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_phone_output"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/user_data_user_email_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/e_mail"
        style="@style/normal_text_style"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/user_data_user_email_label"
        app:layout_constraintBottom_toBottomOf="@+id/user_data_user_email_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="144dp"
        android:layout_marginStart="144dp"/>

    <TextView
        android:id="@+id/user_data_user_delivery_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        style="@style/normal_text_style"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_email_output"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/user_data_user_delivery_address_street_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/normal_text_style"
        app:layout_constraintTop_toTopOf="@+id/user_data_user_delivery_address_label"
        app:layout_constraintBottom_toBottomOf="@+id/user_data_user_delivery_address_label"
        tools:text="@string/street"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="144dp"
        android:layout_marginStart="144dp"/>

    <TextView
        android:id="@+id/user_data_user_delivery_address_number_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/number"
        style="@style/normal_text_style"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_delivery_address_street_output"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="144dp"
        android:layout_marginStart="144dp"/>

    <TextView
        android:id="@+id/user_data_user_delivery_address_city_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/city"
        style="@style/normal_text_style"
        app:layout_constraintTop_toBottomOf="@+id/user_data_user_delivery_address_number_output"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="144dp"
        android:layout_marginStart="144dp"/>

    <LinearLayout
        android:id="@+id/user_data_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/user_data_edit_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/edit_data"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>