<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <ImageView
        android:id="@+id/rr_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/selected_reward_to_redeem"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rr_pin_enter"/>

    <EditText
        android:id="@+id/rr_pin_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="8"
        android:hint="@string/enter_pin"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rr_send_to_redeem"
        android:layout_marginBottom="64dp"/>

    <Button
        android:id="@+id/rr_send_to_redeem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redeem_award"
        android:textSize="20sp"
        android:textColor="@color/black"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>